--- a/docs/modules/servers/partials/HasMimeType.adoc
+++ b/docs/modules/servers/partials/HasMimeType.adoc
@@ -2,6 +2,8 @@
 
 This matcher checks if the content type matches.
 
+This matcher do not walk down the mime tree and stops at the top level mime part.
+
 use:
 
 ....
