JAMES-2157 Introduce a HasMimeTypeAnySubPart matcher
Behaves like HasMimeType mailet but do walk down the mime tree
to look up all body parts content type.

--- a/docs/modules/servers/partials/HasMimeType.adoc
+++ b/docs/modules/servers/partials/HasMimeType.adoc
@@ -2,7 +2,7 @@
 
 This matcher checks if the content type matches.
 
-This matcher do not walk down the mime tree and stops at the top level mime part.
+This matcher does not walk down the mime tree and stops at the top level mime part.
 
 use:
 
