--- a/README.adoc
+++ b/README.adoc
@@ -186,13 +186,18 @@ You have to run MPT tests inside docker. As you need to use maven, the simplest 
 use james/parent image, and override the entry point ( as git and maven are already configured
 there ) :
 
-    $ docker run -t --entrypoint="/root/integration_tests.sh" -v $PWD/.m2:/root/.m2 -v $PWD:/origin james/project JAMES_IP JAMES_PORT SHA1
+    $ export JAMES_ADDRESS=127.0.0.1
+    $ export JAMES_IMAP_PORT=143
+    $ export JAMES_SMTP_PORT=25
+
+    $ mvn -T 1C -DskipTests -pl org.apache.james:apache-james-mpt-external-james -am install
+    $ mvn -T 1C -pl org.apache.james:apache-james-mpt-external-james test -Pintegration-tests\
 
 Where :
 
 * JAMES_IP: IP address or DNS entry for your James server
-* JAMES_PORT: Port allocated to James' IMAP port (should be 143).
-* SHA1(optional): Branch to use in order to build integration tests or master if none.
+* JAMES_IMAP_PORT: Port allocated to James' IMAP port (should be 143).
+* JAMES_SMTP_PORT: Port allocated to James' SMTP port (should be 25).
 
 == Know more about James design
 
