--- a/docs/modules/servers/pages/distributed/configure/rabbitmq.adoc
+++ b/docs/modules/servers/pages/distributed/configure/rabbitmq.adoc
@@ -77,6 +77,14 @@ Optional string, defaults to empty string
 | ssl.keystore.password
 | Configure the keystore password. If configured then "ssl.keystore" must also be configured,
 Optional string, defaults to empty string
+
+| quorum.queues.enable
+| Boolean. Whether to activate Quorum queue usage for use cases that benefits from it (work queue).
+Quorum queues enables high availability.
+False (default value) results in the usage of classic queues.
+
+| quorum.queues.replication.factor
+| Strictly positive integer. The replication factor to use when creating quorum queues.
 |===
 
 == RabbitMQ MailQueue Configuration
