JAMES-3604 RabbitMQ connections should be cluster aware

--- a/docs/modules/servers/pages/distributed/configure/rabbitmq.adoc
+++ b/docs/modules/servers/pages/distributed/configure/rabbitmq.adoc
@@ -85,6 +85,11 @@ False (default value) results in the usage of classic queues.
 
 | quorum.queues.replication.factor
 | Strictly positive integer. The replication factor to use when creating quorum queues.
+
+| hosts
+| Optional, default to the host specified as part of the URI.
+| Allow creating cluster aware connections.
+| A coma separated list of hosts, example: hosts=ip1:5672,ip2:5672
 |===
 
 == RabbitMQ MailQueue Configuration
