JAMES-3607 Documentation for MailReceptionCheck

--- a/docs/modules/servers/pages/distributed/operate/webadmin.adoc
+++ b/docs/modules/servers/pages/distributed/operate/webadmin.adoc
@@ -77,6 +77,9 @@ Supported health checks include:
 * *EventDeadLettersHealthCheck*
 * *Guice application lifecycle*
 * *JPA Backend*: JPA storage.
+* *MailReceptionCheck* We rely on a configured user, send an email to him and
+assert that the email is well received, and can be read within the given configured
+period. Unhealthy means that the email could not be received before reacing the timeout.
 * *MessageFastViewProjection* Health check of the component storing JMAP properties
 which are fast to retrieve. Those properties are computed in advance
 from messages and persisted in order to archive a better performance.
