--- a/docs/modules/servers/pages/distributed/configure/healthcheck.adoc
+++ b/docs/modules/servers/pages/distributed/configure/healthcheck.adoc
@@ -12,4 +12,11 @@ Use this configuration to define the initial delay and period for the Periodical
 
 | healthcheck.period
 | Define the period between two periodical health checks (default: 60s). Units supported are (ms - millisecond, s - second, m - minute, h - hour, d - day). Default unit is millisecond.
+
+| reception.check.user
+| User to be using for running the "mail reception" health check. The user must exist.
+If not specified, the mail reception check is a noop.
+
+| reception.check.timeout
+| Period after which mail reception is considered faulty. Defaults to one minute.
 |===
