--- a/docs/modules/servers/pages/distributed/operate/metrics.adoc
+++ b/docs/modules/servers/pages/distributed/operate/metrics.adoc
@@ -129,12 +129,17 @@ SMTP latencies reports
 - https://github.com/apache/james-project/tree/master/server/grafana-reporting/prometheus-datasource/James_SMTP_CountBoard.json[SMTP count] :
 Request count for the SMTP protocol
 
-Some example dashboards: +
+=== Dashboard samples
+Latencies for the JMAP protocol +
+
+image::JMAP_board.png[JMAP]
+
 Latencies for the IMAP protocol +
-image::JMAP_board.png[JMAP] +
-Latencies for the IMAP protocol +
-image::IMAP_board.png[IMAP] +
-JVM statistics (heap, gcs, etc...) +
+
+image::IMAP_board.png[IMAP]
+
+JVM Statistics +
+
 image::JVM_board.png[JVM]
 
 == Expose metrics for Elasticsearch collection
